Refactoring server-mock to be runnable as standalone app